code/c/int-int/primitives.h

// Copyright (c) 2019, the Dart project authors.  Please see the AUTHORS file
// for details. All rights reserved. Use of this source code is governed by a
// BSD-style license that can be found in the LICENSE file.

int sum(int a, int b);
int subtract(int *a, int b);
int *multiply(int a, int b);